--- a/Client/src/app/welcome/welcome.component.html
+++ b/Client/src/app/welcome/welcome.component.html
@@ -17,7 +17,7 @@
   </mat-card>
 </div>
 <div class = "background-image">
-  <img src="../static/img/Cloud-bg.png">
+  <img src = "/Client/src/static/img/Cloud-bg.png" alt="digital cloud">
 </div>
 <div class='uploadButton'>
   <a class='route-link' [routerLink]="['/receipts']">
